Clase 12/Manifiestos/go_rest_client_grpc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
        - name: rest-api
          image: <DIRECCION-DE-ZOT>/go-rest-api:latest
          ports:
            - containerPort: 8081

        - name: grpc-client
          image: <DIRECCION-DE-ZOT>/go-grpc-client:latest
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
spec:
  selector:
    app: go-api
  ports:
    - name: rest
      port: 8081
      targetPort: 8081
