Clase 12/Manifiestos/rest_rust.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rust-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-api
  template:
    metadata:
      labels:
        app: rust-api
    spec:
      containers:
        - name: rust-api
          image: <DIRECCION-DE-ZOT>/rust-api:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rust-api-service
spec:
  selector:
    app: rust-api
  ports:
    - port: 80
      targetPort: 8080
